--- a/code/douban/1.css
+++ b/code/douban/1.css
@@ -1,3 +1,13 @@
-body{
-    color: blue;
+.border-box{
+    height: 500px;
+    width: 500px;
+    background: red;
+    padding: 100px;
+    border: 50px solid blue;
+    margin: 20px;
+    box-sizing:border-box;
+    float:left;
+}
+.content-box{
+    box-sizing:content-box;
 }
